fixed iphone button overlap bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,13 +17,11 @@ html {
 }
 
 button {
-  flex-basis: 100%;
   background: none;
   color: white;
   border-image: url(/assets/images/button-border.png) 14;
   border-width: .5vw;
-  padding-top: 1vw;
-  padding-bottom: 1vw;
+  padding: 1vw 0;
   margin: .2vw;
 }
 
@@ -76,7 +74,7 @@ input {
   color: white;
 }
 
-@media (max-width: 597px) {
+@media (max-width: 567px) {
   body {
     margin: 0;
   }
